# claude-config

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.ps1  setup.sh  system_config.yaml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
.stfolder/: syncthing-folder-8699a1.txt
agents/: _utilities.md  analysis_engineer.md  canonical_engineer.md  code-optimizer.md  devils_advocate.md  domain_expert.md  efficiency_advisor.md  evaluator_agent.md  hr_agent.md  inquirer_agent.md  integration_engineer.md  librarian_agent.md  master_orchestrator.md  product_manager_agent.md  project_manager_agent.md  quality_advisor.md  reliability_engineer.md  risk_advisor.md  scribe_agent.md  session_scheduler.md  spawner_agent.md  trainer_agent.md
commands/: resume-mas.md
core/: access_control.py  audit_logger.py  capability_registry.py  cli.py  config.py  handoff_engine.py  message_bus.py  prompt_assembler.py  shared_state_manager.py
foundation/: folder_structure.yaml
mas/: CLAUDE.md  README.md  global_graph.yaml  system_config.yaml
mas/core/: IMPORT_MAP.md  RESTRUCTURE_PLAN.md  access_control.py  cli.py  (+25 more)
multi_agent_system/: thu_apr_09_2026_project_plan_for_multi_agent_system.md  v1_capability_gap_certificate.yaml  v1_handoff_protocol.yaml  v1_system_config.yaml
policies/: spawn_policy.yaml
roster/: registry_index.yaml  training_backlog.yaml  version_history.yaml
scripts/: check_archive_clean.py
standards/: README.md  documentation-format.md  mas-governance.md  mas-project-lifecycle.md  wire-protocol.md
(+225 files in other folders)
